tests/paczka1/small_fuzzy/71226823.err
Error in line 4: aJl4Q S282 90,,
Error in line 3: 1k4 S282 76,4
Error in line 2: eIOC0dzYTg A894 24,8
Error in line 15: qVejGr7nj A779 36,2
